--- a/app/src/main/res/layout/content_kunnr_detail.xml
+++ b/app/src/main/res/layout/content_kunnr_detail.xml
@@ -93,7 +93,7 @@
         <ListView
             android:id="@+id/lv_sysinfo_detail"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="150dp"
             android:layout_below="@+id/tableRow2" />
     </RelativeLayout>
 
@@ -110,6 +110,101 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_weight="0.22">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp"
+                    android:digits="@+id/text"
+                    android:text="回单上传:(亲,别忘了签字盖章!)"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_weight="0.22">
+
+                <ScrollView
+                    android:id="@+id/sc"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true">
+
+                    <TableLayout
+                        android:id="@+id/photoViewTable"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </ScrollView>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight="0.01">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp"
+                    android:digits="@+id/text"
+                    android:text="到货日期:"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/confirmTime"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1.70"
+                    android:focusable="false"
+                    android:inputType="text"
+                    android:textColor="@android:color/holo_blue_dark"
+                    android:textSize="16sp">
+
+                    <requestFocus />
+                </EditText>
+            </TableRow>
+
+            <!--按钮操作-->
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
+
+                <Button
+                    android:id="@+id/submitData"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_margin="3dip"
+                    android:layout_weight="0.30"
+                    android:background="@color/colorAccent"
+                    android:text="确认提交" />
+
+                <Button
+                    android:id="@+id/exit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_margin="3dip"
+                    android:layout_marginRight="30dp"
+                    android:layout_weight="0.30"
+                    android:background="@color/colorAccent"
+                    android:text="返回" />
+            </TableRow>
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -191,6 +286,7 @@
                     android:text="详细地址:"
                     android:textColor="#000000"
                     android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/dizhi_mingxi"
                     android:layout_width="wrap_content"
@@ -246,101 +342,6 @@
                     android:layout_marginTop="5dp"
                     android:textColor="@android:color/holo_red_light"
                     android:textSize="16sp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_weight="0.22">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:digits="@+id/text"
-                    android:text="回单上传:"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_weight="0.22">
-
-                <ScrollView
-                    android:id="@+id/sc"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true">
-
-                    <TableLayout
-                        android:id="@+id/photoViewTable"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </ScrollView>
-            </TableRow>
-
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight="0.01">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:digits="@+id/text"
-                    android:text="到货日期:"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp" />
-
-                <EditText
-                    android:id="@+id/confirmTime"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_weight="1.70"
-                    android:focusable="false"
-                    android:inputType="text"
-                    android:textColor="@android:color/holo_blue_dark"
-                    android:textSize="16sp">
-
-                    <requestFocus />
-                </EditText>
-            </TableRow>
-            <!--按钮操作-->
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-
-                <Button
-                    android:id="@+id/submitData"
-                    android:layout_width="wrap_content"
-                    android:layout_height="45dp"
-                    android:layout_margin="3dip"
-                    android:layout_weight="0.30"
-                    android:background="@color/colorAccent"
-                    android:text="提交" />
-
-                <Button
-                    android:id="@+id/exit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="45dp"
-                    android:layout_margin="3dip"
-                    android:layout_marginRight="30dp"
-                    android:layout_weight="0.30"
-                    android:background="@color/colorAccent"
-                    android:text="返回" />
             </TableRow>
         </LinearLayout>
     </ScrollView>
